Fixed button grid alignment on medium devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -671,10 +671,15 @@ h2#formTitle {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; 
+    gap: 20px;
 }
 
 #quizRepeat, #exit, #cert {
     font-size: 1.7rem;
+}
+
+#quizRepeat, #exit{
+    margin: 5px 10px;
 }
 
 #footer-details{
